<resources>
    <string name="app_name">2tor4You</string>
    <string name="txtDontHaveAccount">Don\'t have an account?</string>
    <string name="txtSignUpBelow">Sign up below:</string>
    <string name="btnStudent">Become a student</string>
    <string name="btnTutor">Become a tutor</string>
    <string name="txtHaveAccount">Already have an account?</string>
    <string name="txtLogin">Login?</string>
    <string name="txt_LoginHeading">Login</string>
    <string name="txtLoginEmail">Email</string>
    <string name="txtLoginPassword">Password</string>
    <string name="txtForgotPassword">Forgot Password?</string>
    <string name="btnLogin">Login</string>
    <string name="txtSignUp">Sign Up?</string>
    <string-array name="spinRole">

        <item>Role</item>
        <item>Tutor</item>
        <item>Student</item>

    </string-array>
    <string name="txt_HeadingChangePassword">Change Password</string>
    <string name="txtCurrentPassword">Current Password</string>
    <string name="txtNewPassword">New Password</string>
    <string name="txtConfirmPassword">Confirm New Password</string>
    <string name="btnCreateNewPassword">Create new password</string>
    <string name="txt_HeadingDeleteAccount">Delete Account</string>
    <string name="txtD">Are you sure you want to delete your account?
        When you delete your account with 2tor4You, it cannot be retrieved again. Your sessions and personal information will be removed permantally.</string>
    <string name="txtDeleteConfirmPassword">Enter password to confirm:</string>
    <string name="txtDeleteAccountPassword">Password</string>
    <string name="btnDeleteAccount">Delete Account</string>
    <string name="txt_SignUpStudentHeading">Create your student account</string>
    <string name="txt_StudentFirstName">First Name</string>
    <string name="txt_StudentLastName">Last Name</string>
    <string name="txtStudentEmail">Email</string>
    <string name="txtRegisterStudentPassword">Password</string>
    <string name="txtConfirmRegisterStudentPassword">Confirm Password</string>
    <string name="btnStudentSignUp">Sign up</string>
    <string name="txt_SignUpTutorHeading">Create your tutor account</string>
    <string name="txt_TutorFirstName">First Name</string>
    <string name="txt_TutorLastName">Last Name</string>
    <string name="txtTutorEmail">Email</string>
    <string name="txtRegisterTutorPassword">Password</string>
    <string name="txtConfirmRegisterTutorPassword">Confirm Password</string>
    <string name="chk_Suitable">I have a suitable computer with a webcam and microphone, and a reliable internet connection for online lessons.</string>
    <string name="chk_Agree">I agree to obtain a verification and background check</string>
    <string name="btnTutorSignUp">Sign Up</string>
    <string name="txtAccountHeading">Account</string>
    <string name="txtAccNameSurnameSubHeading">Jane Doe</string>
    <string name="txtAccEmailSubHeading">janedoe@gmail.com</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="txtNotifications">Notifications</string>
    <string name="txtSettings">Settings</string>
    <string name="txtTermsAndC">Terms and Conditions</string>
    <string name="txtContactUs">Contact 2tor4You</string>
    <string name="txtLogOut">Log Out</string>
    <string name="txtSettingsHeading">Settings</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="btnDeleteAccountSettings">Delete Account</string>
    <string name="txtNotificationsHeading">Notifications</string>
    <string name="txtReminders">Reminders</string>
    <string name="txtReminderDetails">We will notify you of upcoming sessions and tasks</string>
    <string name="btnEmail">Email</string>
    <string name="txtMessages">Messages</string>
    <string name="txtMessageDetails">We will notify you when you receive a new message </string>
    <string name="btnMessage">Message</string>
    <string name="txtTermsAndConditions">Terms And Conditions</string>
    <string name="txtTerms">1. Acceptance of Terms

By accessing or using the [Your App Name] (the "App"), you agree to comply with and be bound by these Terms and Conditions ("Terms"). If you do not agree to these Terms, please do not use the App.

2. User Registration

a. To use certain features of the App, you may be required to register for an account. You agree to provide accurate and complete information during the registration process and to update such information to keep it accurate and current.

b. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account.

3. Use of the App

a. The App provides a platform for connecting students and tutors for educational purposes. Users are solely responsible for the interactions and content they create on the App.

b. Users must not engage in any unlawful, harmful, or offensive behavior while using the App.

4. User Content

a. Users may post content on the App, including but not limited to profile information and reviews. By posting content, you grant the App provider a non-exclusive, worldwide, royalty-free license to use, display, and distribute your content in connection with the App.

b. You are solely responsible for the accuracy and legality of the content you post on the App.

5. Payments and Fees

a. Payment for tutoring services may be facilitated through the App. You agree to pay all fees and charges associated with your use of the App as specified in the App\'s pricing and payment terms.

b. Payments made through the App are processed by third-party payment processors, and the App provider is not responsible for any issues related to payment processing.

6. Cancellation and Refunds

a. Users may cancel tutoring sessions in accordance with the cancellation policy provided by the tutor.

b. Refund policies are determined by individual tutors, and the App provider is not responsible for refunding fees paid for tutoring services.

7. Privacy

a. The App\'s privacy policy governs the collection, use, and disclosure of user data. By using the App, you consent to the practices described in the privacy policy.

8. Termination

The App provider reserves the right to terminate or suspend your account and access to the App at its sole discretion for any reason, including violation of these Terms.

9. Disclaimers and Limitation of Liability

a. The App provider makes no warranties or representations regarding the quality, accuracy, or availability of tutoring services offered through the App.

b. In no event shall the App provider be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in any way connected with the use of the App.

10. Governing Law and Jurisdiction

These Terms are governed by and construed in accordance with the laws of [Your Jurisdiction]. Any disputes arising from or related to these Terms or the use of the App shall be subject to the exclusive jurisdiction of the courts of [Your Jurisdiction].

11. Contact Information

For questions or concerns regarding these Terms, please contact us at [Contact Email Address].</string>
    <string name="txtProHeading">My Profile</string>
    <string name="txtPersonalInfo">Personal Information</string>
    <string name="txtEdu">Education</string>
    <string name="txtProfileName">First Name</string>
    <string name="txtProfileSurname">Last Name</string>
    <string name="txtDOB">Date of birth</string>
    <string-array name="spinGender">

        <item>Gender</item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>

    </string-array>
    <string name="txtPhone">Phone Number</string>
    <string name="txtProEmail">Email</string>
    <string name="txtLocation">Location</string>
    <string name="txtLanguage">Language</string>
    <string name="txtSchool">School</string>
    <string name="txtUni">University</string>
    <string-array name="spinProvince">

        <item>Province</item>
        <item>Eastern Cape</item>
        <item>Free State</item>
        <item>Gauteng</item>
        <item>KwaZulu-Natal</item>
        <item>Limpopo</item>
        <item>Mpumalanga</item>
        <item>North West</item>
        <item>Northern Cape</item>
        <item>Western Cape</item>

    </string-array>
    <string-array name="eastern_cape_cities">
        <item>City</item>
        <item>Port Elizabeth</item>
        <item>East London</item>
        <item>Uitenhage</item>
        <item>Grahamstown</item>
        <item>Queenstown</item>
        <item>Mthatha</item>
        <item>Bhisho</item>
    </string-array>
    <string-array name="free_state_cities">
        <item>City</item>
        <item>Bloemfontein</item>
        <item>Welkom</item>
        <item>Bethlehem</item>
        <item>Sasolburg</item>
        <item>Kroonstad</item>
        <item>Parys</item>
    </string-array>
    <string-array name="gauteng_cities">
        <item>City</item>
        <item>Johannesburg</item>
        <item>Pretoria</item>
        <item>Centurion</item>
        <item>Midrand</item>
        <item>Sandton</item>
        <item>Randburg</item>
        <item>Roodepoort</item>
        <item>Kempton Park</item>
        <item>Boksburg</item>
        <item>Benoni</item>
        <item>Vereeniging</item>
    </string-array>
    <string-array name="kwa_zulu_natal_cities">
        <item>City</item>
        <item>Durban</item>
        <item>Pietermaritzburg</item>
        <item>Newcastle</item>
        <item>Richards Bay</item>
        <item>Ladysmith</item>
        <item>Empangeni</item>
        <item>Port Shepstone</item>
        <item>Estcourt</item>
        <item>Ballito</item>
        <item>Howick</item>
    </string-array>
    <string-array name="limpopo_cities">
        <item>City</item>
        <item>Polokwane (Pietersburg)</item>
        <item>Tzaneen</item>
        <item>Thohoyandou</item>
        <item>Mokopane (Potgietersrus)</item>
        <item>Musina</item>
        <item>Phalaborwa</item>
        <item>Giyani</item>
        <item>Lebowakgomo</item>
        <item>Modimolle (Nylstroom)</item>
    </string-array>
    <string-array name="mpumalanga_cities">
        <item>City</item>
        <item>Nelspruit</item>
        <item>Witbank (eMalahleni)</item>
        <item>Middelburg</item>
        <item>Secunda</item>
        <item>Ermelo</item>
        <item>Standerton</item>
        <item>Lydenburg</item>
        <item>Barberton</item>
        <item>Hazyview</item>
    </string-array>
    <string-array name="north_west_cities">
        <item>City</item>
        <item>Rustenburg</item>
        <item>Mahikeng (Mafikeng)</item>
        <item>Potchefstroom</item>
        <item>Klerksdorp</item>
        <item>Brits</item>
        <item>Orkney</item>
        <item>Lichtenburg</item>
    </string-array>
    <string-array name="northern_cape_cities">
        <item>City</item>
        <item>Kimberley</item>
        <item>Upington</item>
        <item>Springbok</item>
        <item>De Aar</item>
        <item>Kathu</item>
        <item>Kuruman</item>
    </string-array>
    <string-array name="western_cape_cities">
        <item>City</item>
        <item>Cape Town</item>
        <item>Stellenbosch</item>
        <item>Paarl</item>
        <item>Worcester</item>
        <item>George</item>
        <item>Mossel Bay</item>
        <item>Oudtshoorn</item>
        <item>Knysna</item>
        <item>Beaufort West</item>
    </string-array>
    <string name="btnSaveProfile">Save</string>
    <string name="txtWelcomeStud">Welcome Jane</string>
    <string name="txtGoalsHeading">My Learning Goals</string>
    <string name="txtUpcomingSessions">Upcoming Sessions</string>
    <string name="btnViewAllSessions">View All</string>
    <string name="txtUpcomingSession_1">English Lesson</string>
    <string name="txtUpcomingSession_2">Afrikaans Lesson</string>
</resources>