<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ActivityRegisterTutor">

    <Button
        android:id="@+id/btnTutorSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/white"
        android:text="@string/btnTutorSignUp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/chk_Agree"
        app:layout_constraintStart_toStartOf="@+id/chk_Agree"
        app:layout_constraintTop_toBottomOf="@+id/chk_Agree"
        app:rippleColor="@color/white" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBackTutorToMain"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/txt_SignUpTutorHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_SignUpTutorHeading"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txt_TutorFirstName"
        android:layout_width="322dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txt_TutorFirstName"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

    <EditText
        android:id="@+id/txt_TutorLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txt_TutorLastName"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_TutorFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_TutorFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txt_TutorFirstName" />

    <EditText
        android:id="@+id/txt_TutorEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txtTutorEmail"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_TutorLastName"
        app:layout_constraintStart_toStartOf="@+id/txt_TutorLastName"
        app:layout_constraintTop_toBottomOf="@+id/txt_TutorLastName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="12dp"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="none"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_TutorEmail"
        app:layout_constraintStart_toStartOf="@+id/txt_TutorEmail"
        app:layout_constraintTop_toBottomOf="@+id/txt_TutorEmail"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRegisterTutorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/txtRegisterTutorPassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="12dp"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="none"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/txtInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutPassword"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmRegisterTutorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/txtConfirmRegisterTutorPassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_Suitable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:button="@drawable/check_box"
        android:text="@string/chk_Suitable"
        android:textColor="@color/white"
        app:buttonIcon="@drawable/check_box"
        app:layout_constraintEnd_toEndOf="@+id/txtInputLayoutConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/txtInputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutConfirmPassword" />

    <CheckBox
        android:id="@+id/chk_Agree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:button="@drawable/checkbox"
        android:text="@string/chk_Agree"
        android:textColor="@color/white"
        app:buttonIcon="@drawable/check_box"
        app:layout_constraintEnd_toEndOf="@+id/chk_Suitable"
        app:layout_constraintStart_toStartOf="@+id/chk_Suitable"
        app:layout_constraintTop_toBottomOf="@+id/chk_Suitable" />

</androidx.constraintlayout.widget.ConstraintLayout>