<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/design"
    tools:context=".ActivityDeleteAccount">

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/white"
        android:text="@string/btnDeleteAccount"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutDeleteAccountPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutDeleteAccountPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDeleteAccountPassword"
        app:rippleColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDeleteAccountPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="none"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtDeleteConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/txtDeleteConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtDeleteConfirmPassword"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDeleteAccountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/txtDeleteAccountPassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtDeleteConfirmPassword"
        android:layout_width="293dp"
        android:layout_height="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/txtDeleteConfirmPassword"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtD"
        app:layout_constraintTop_toBottomOf="@+id/txtD" />

    <TextView
        android:id="@+id/txtD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtD"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtSureDeleteAccount"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/txtSureDeleteAccount"
        app:layout_constraintTop_toBottomOf="@+id/txtSureDeleteAccount" />

    <TextView
        android:id="@+id/txtSureDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_HeadingDeleteAccount"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/txt_HeadingDeleteAccount"
        app:layout_constraintTop_toBottomOf="@+id/txt_HeadingDeleteAccount" />

    <Button
        android:id="@+id/btnBack_DeleteAccountToSettings"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txt_HeadingDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        tools:text="@string/txt_HeadingChangePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>